--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=demo
+spring.main.banner-mode=off
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username=root
+spring.datasource.password=1234
