--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=demo
+spring.datasource.url=jdbc:mysql://localhost:3306/employees
+spring.datasource.username=root
+spring.datasource.password=1234
