--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/employees
 spring.datasource.username=root
 spring.datasource.password=1234
+
+#change the start path for end point
+spring.data.rest.base-path=/api
+spring.data.rest.default-page-size=10
+spring.data.rest.max-page-size=20
