-git user from database(postgresql) \n -invoke auth provider and provide our version with user details service \n -apply roles for every user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=demo
+spring.security.user.password=1234
+spring.security.user.name=rashed
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/rashed
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+logging.level.org.springframework.security=DEBUG
+
